tests/typec-test/test_out/function-parse-out.txt
error: expected Ident but got String
 --> function\root.ctl:1:4
  |
1 | fn "default" main() -> unit {}
  |    ^^^^^^^^^ token located here
  |
  = info: list -> item -> struct -> name

